--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
 
             <div class="inner-component">
                 <img src="icon/cube-skeleton-svgrepo-com.svg" alt="box" class="box" title="mobile-box">
-                <p>This box is  a 4 corner box that keep over a million init without any charges you are the owner of your box you can remove and add but once you add a target to it. It will add a padlock to it to show that your box account is locked the only time you can access it is if you terminate your target. <br>
+                <p class="box-details">This box is  a 4 corner box that keep over a million init without any charges you are the owner of your box you can remove and add but once you add a target to it. It will add a padlock to it to show that your box account is locked the only time you can access it is if you terminate your target. <br>
                     <br>
-                    It is technically proven that your box can never be hacked because an AI hacker is assign to every account that is created that has a box and you can also keep your account in privacy without your personal hacker having access to it <br>
+                    <span>
+                        It is technically proven that your box can never be hacked because an AI hacker is assign to every account that is created that has a box and you can also keep your account in privacy without your personal hacker having access to it
+                    </span> <br>
                     <br>
                     <span>
                         Everybody has different shape to their personal box and your family can share your box with a different verification code and can also receive transfer but before the money enters your box we will send a message of if you know anything about the money
